--- a/app/src/main/res/layout/activity_breweries.xml
+++ b/app/src/main/res/layout/activity_breweries.xml
@@ -4,14 +4,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.kooknluke.montanabreweries.Beer">
+    tools:context="com.kooknluke.montanabreweries.Breweries">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Search By Beer"
-        android:id="@+id/txtSearchBeer"
+        android:text="Search By Breweries"
+        android:id="@+id/txtSearchByBreweries"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -19,145 +19,126 @@
     <RadioGroup
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@+id/txtSearchBeer"
+        android:layout_below="@+id/txtSearchByBreweries"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="42dp"
-        android:id="@+id/radioGroup"
-        android:layout_alignRight="@+id/txtSearchBeer"
-        android:layout_alignEnd="@+id/txtSearchBeer">
+        android:layout_marginTop="38dp"
+        android:layout_alignRight="@+id/txtSearchByBreweries"
+        android:layout_alignEnd="@+id/txtSearchByBreweries"
+        android:id="@+id/radioGroup2">
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ale"
-            android:id="@+id/rbAle"
+            android:text="A-C"
+            android:id="@+id/rbAC"
             android:checked="false" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Stout"
-            android:id="@+id/rbStout"
+            android:text="D-F"
+            android:id="@+id/rbDF"
             android:checked="false" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Lager"
-            android:id="@+id/rbLager"
+            android:text="G-J"
+            android:id="@+id/rbGJ"
             android:checked="false" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Weizen"
-            android:id="@+id/rbWeizen"
+            android:text="K-O"
+            android:id="@+id/rbKO"
             android:checked="false" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="India Pale Ale"
-            android:id="@+id/rbIPA"
+            android:text="P-R"
+            android:id="@+id/rbPR"
             android:checked="false" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Oktoberfest"
-            android:id="@+id/rbOktoberfest"
+            android:text="S-V"
+            android:id="@+id/rbSV"
             android:checked="false" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Porter"
-            android:id="@+id/rbPorter"
+            android:text="W-Z"
+            android:id="@+id/rbWZ"
             android:checked="false" />
 
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Helles"
-            android:id="@+id/rbHelles"
-            android:checked="false" />
     </RadioGroup>
 
     <RadioGroup
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_alignTop="@+id/radioGroup"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/radioGroup2"
+        android:layout_toRightOf="@+id/radioGroup2"
+        android:layout_toEndOf="@+id/radioGroup2">
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="&lt;5% ABV"
-            android:id="@+id/rb5"
-            android:layout_gravity="right"
-            android:checked="false" />
+            android:text="New RadioButton"
+            android:id="@+id/radioButton9" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="&lt;6% ABV"
-            android:id="@+id/rb6"
-            android:layout_gravity="right"
-            android:checked="false" />
+            android:text="New RadioButton"
+            android:id="@+id/radioButton10" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="&lt;7%ABV"
-            android:id="@+id/rb7"
-            android:layout_gravity="right"
-            android:checked="false" />
+            android:text="New RadioButton"
+            android:id="@+id/radioButton11" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="&lt;8% ABV"
-            android:id="@+id/rb8"
-            android:layout_gravity="right"
-            android:checked="false" />
+            android:text="New RadioButton"
+            android:id="@+id/radioButton12" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="&lt;9% ABV"
-            android:id="@+id/rb9"
-            android:layout_gravity="right"
-            android:checked="false" />
+            android:text="New RadioButton"
+            android:id="@+id/radioButton13" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="&lt;10% ABV"
-            android:id="@+id/rb10"
-            android:layout_gravity="right"
-            android:checked="false" />
+            android:text="New RadioButton"
+            android:id="@+id/radioButton14" />
 
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New RadioButton"
+            android:id="@+id/radioButton15" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New RadioButton"
+            android:id="@+id/radioButton16" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Button"
+            android:id="@+id/button" />
     </RadioGroup>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Search"
-        android:id="@+id/btnBeerSearch"
-        android:layout_gravity="right"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/txtBeerTestDisplay"
-        android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/btnBeerSearch"
-        android:layout_toStartOf="@+id/btnBeerSearch" />
-
 </RelativeLayout>
