--- a/app/src/main/res/layout/activity_beer.xml
+++ b/app/src/main/res/layout/activity_beer.xml
@@ -32,56 +32,64 @@
             android:layout_height="wrap_content"
             android:text="Ale"
             android:id="@+id/rbAle"
-            android:checked="false" />
+            android:checked="false"
+            android:onClick="onRadioButtonClicked" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Stout"
             android:id="@+id/rbStout"
-            android:checked="false" />
+            android:checked="false"
+            android:onClick="onRadioButtonClicked" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Lager"
             android:id="@+id/rbLager"
-            android:checked="false" />
+            android:checked="false"
+            android:onClick="onRadioButtonClicked" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Weizen"
             android:id="@+id/rbWeizen"
-            android:checked="false" />
+            android:checked="false"
+            android:onClick="onRadioButtonClicked" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="India Pale Ale"
             android:id="@+id/rbIPA"
-            android:checked="false" />
+            android:checked="false"
+            android:onClick="onRadioButtonClicked" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Oktoberfest"
             android:id="@+id/rbOktoberfest"
-            android:checked="false" />
+            android:checked="false"
+            android:onClick="onRadioButtonClicked" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Porter"
             android:id="@+id/rbPorter"
-            android:checked="false" />
+            android:checked="false"
+            android:onClick="onRadioButtonClicked" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Helles"
             android:id="@+id/rbHelles"
-            android:checked="false" />
+            android:checked="false"
+            android:onClick="onRadioButtonClicked" />
     </RadioGroup>
 
     <RadioGroup
@@ -97,7 +105,8 @@
             android:text="&lt;5% ABV"
             android:id="@+id/rb5"
             android:layout_gravity="right"
-            android:checked="false" />
+            android:checked="false"
+            android:onClick="onRadioButtonClicked" />
 
         <RadioButton
             android:layout_width="wrap_content"
@@ -105,7 +114,8 @@
             android:text="&lt;6% ABV"
             android:id="@+id/rb6"
             android:layout_gravity="right"
-            android:checked="false" />
+            android:checked="false"
+            android:onClick="onRadioButtonClicked" />
 
         <RadioButton
             android:layout_width="wrap_content"
@@ -113,7 +123,8 @@
             android:text="&lt;7%ABV"
             android:id="@+id/rb7"
             android:layout_gravity="right"
-            android:checked="false" />
+            android:checked="false"
+            android:onClick="onRadioButtonClicked" />
 
         <RadioButton
             android:layout_width="wrap_content"
@@ -121,7 +132,8 @@
             android:text="&lt;8% ABV"
             android:id="@+id/rb8"
             android:layout_gravity="right"
-            android:checked="false" />
+            android:checked="false"
+            android:onClick="onRadioButtonClicked" />
 
         <RadioButton
             android:layout_width="wrap_content"
@@ -129,7 +141,8 @@
             android:text="&lt;9% ABV"
             android:id="@+id/rb9"
             android:layout_gravity="right"
-            android:checked="false" />
+            android:checked="false"
+            android:onClick="onRadioButtonClicked" />
 
         <RadioButton
             android:layout_width="wrap_content"
@@ -137,7 +150,8 @@
             android:text="&lt;10% ABV"
             android:id="@+id/rb10"
             android:layout_gravity="right"
-            android:checked="false" />
+            android:checked="false"
+            android:onClick="onRadioButtonClicked" />
 
     </RadioGroup>
 
