--- a/app/src/main/res/layout/activity_seasons.xml
+++ b/app/src/main/res/layout/activity_seasons.xml
@@ -25,7 +25,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="36dp"
-        android:checked="false" />
+        android:checked="false"
+        android:onClick="onRadioButtonClicked"/>
 
     <RadioButton
         android:layout_width="wrap_content"
@@ -35,7 +36,8 @@
         android:layout_below="@+id/rbSpring"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:checked="false" />
+        android:checked="false"
+        android:onClick="onRadioButtonClicked"/>
 
     <RadioButton
         android:layout_width="wrap_content"
@@ -45,7 +47,8 @@
         android:layout_below="@+id/rbSummer"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:checked="false" />
+        android:checked="false"
+        android:onClick="onRadioButtonClicked"/>
 
     <RadioButton
         android:layout_width="wrap_content"
@@ -55,5 +58,6 @@
         android:layout_below="@+id/rbAutumn"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:checked="false" />
+        android:checked="false"
+        android:onClick="onRadioButtonClicked"/>
 </RelativeLayout>
