--- a/app/src/main/res/layout/activity_state.xml
+++ b/app/src/main/res/layout/activity_state.xml
@@ -25,5 +25,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="36dp"
-        android:checked="false" />
+        android:checked="false"
+        android:onClick="onRadioButtonClicked"/>
 </RelativeLayout>
