--- a/app/src/main/res/layout/activity_beer.xml
+++ b/app/src/main/res/layout/activity_beer.xml
@@ -171,7 +171,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/txtBeerTestDisplay"
         android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/btnBeerSearch"
-        android:layout_toStartOf="@+id/btnBeerSearch" />
+        android:layout_toStartOf="@+id/btnBeerSearch"
+        android:layout_toLeftOf="@+id/btnBeerSearch" />
 
 </RelativeLayout>
