--- a/app/src/main/res/layout/activity_breweries.xml
+++ b/app/src/main/res/layout/activity_breweries.xml
@@ -16,137 +16,35 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <RadioGroup
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/etSearchBreweries"
         android:layout_below="@+id/txtSearchByBreweries"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="38dp"
-        android:layout_alignRight="@+id/txtSearchByBreweries"
-        android:layout_alignEnd="@+id/txtSearchByBreweries"
-        android:id="@+id/radioGroup2">
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="A-C"
-            android:id="@+id/rbAC"
-            android:checked="false"
-            android:onClick="onRadioButtonClicked" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="D-F"
-            android:id="@+id/rbDF"
-            android:checked="false"
-            android:onClick="onRadioButtonClicked" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="G-J"
-            android:id="@+id/rbGJ"
-            android:checked="false"
-            android:onClick="onRadioButtonClicked" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="K-O"
-            android:id="@+id/rbKO"
-            android:checked="false"
-            android:onClick="onRadioButtonClicked" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="P-R"
-            android:id="@+id/rbPR"
-            android:checked="false"
-            android:onClick="onRadioButtonClicked" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="S-V"
-            android:id="@+id/rbSV"
-            android:checked="false"
-            android:onClick="onRadioButtonClicked" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="W-Z"
-            android:id="@+id/rbWZ"
-            android:checked="false"
-            android:onClick="onRadioButtonClicked" />
-
-    </RadioGroup>
-
-    <RadioGroup
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/radioGroup2"
-        android:layout_toRightOf="@+id/radioGroup2"
-        android:layout_toEndOf="@+id/radioGroup2">
+        android:layout_alignParentEnd="true" />
 
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New RadioButton"
-            android:id="@+id/radioButtonAC"
-            android:onClick="onRadioButtonClicked" />
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Show Beers"
+        android:id="@+id/btnShowBeers"
+        android:layout_below="@+id/etSearchBreweries"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New RadioButton"
-            android:id="@+id/radioButtonDF" />
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Show Address"
+        android:id="@+id/btnShowAddress"
+        android:layout_below="@+id/etSearchBreweries"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New RadioButton"
-            android:id="@+id/radioButtonGJ" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New RadioButton"
-            android:id="@+id/radioButtonKO" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New RadioButton"
-            android:id="@+id/radioButtonPR" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New RadioButton"
-            android:id="@+id/radioButtonSV" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New RadioButton"
-            android:id="@+id/radioButtonWZ" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New RadioButton"
-            android:id="@+id/radioButton16" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Go"
-            android:id="@+id/button" />
-    </RadioGroup>
 </RelativeLayout>
