--- a/app/src/main/res/layout/activity_breweries.xml
+++ b/app/src/main/res/layout/activity_breweries.xml
@@ -47,4 +47,11 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtTestBreweries"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
