--- a/app/src/main/res/layout/activity_town.xml
+++ b/app/src/main/res/layout/activity_town.xml
@@ -86,6 +86,18 @@
             android:layout_height="wrap_content"
             android:text="New RadioButton"
             android:id="@+id/radioButton8" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Search"
+            android:id="@+id/btnSearchTwn" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/townTextView" />
     </RadioGroup>
 
     <RadioGroup
