--- a/app/src/main/res/layout/activity_nutrition.xml
+++ b/app/src/main/res/layout/activity_nutrition.xml
@@ -16,48 +16,32 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <RadioButton
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="&lt;100 Calories"
-        android:id="@+id/rb100"
+        android:id="@+id/etNutritionSearch"
         android:layout_below="@+id/txtSearchByNutrition"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="36dp"
-        android:checked="false"
-        android:onClick="onRadioButtonClicked"/>
+        android:text="Enter Name of Beer"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
-    <RadioButton
+    <Button
+        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="&lt;150 Calories"
-        android:id="@+id/rb150"
-        android:layout_below="@+id/rb100"
+        android:text="Search"
+        android:id="@+id/btnNutritionSearch"
+        android:layout_below="@+id/etNutritionSearch"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:checked="false"
-        android:onClick="onRadioButtonClicked"/>
+        android:layout_alignParentStart="true" />
 
-    <RadioButton
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="&lt;200 Calories"
-        android:id="@+id/rb200"
-        android:layout_below="@+id/rb150"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:checked="false"
-        android:onClick="onRadioButtonClicked"/>
+        android:id="@+id/txtSearchNutrition"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="&lt;250 Calories"
-        android:id="@+id/rb250"
-        android:layout_below="@+id/rb200"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:checked="false"
-        android:onClick="onRadioButtonClicked" />
 </RelativeLayout>
