--- a/app/src/main/res/layout/activity_seasons.xml
+++ b/app/src/main/res/layout/activity_seasons.xml
@@ -17,11 +17,13 @@
         android:layout_alignParentStart="true" />
 
     <RadioGroup
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_below="@+id/txtSearchBySeason"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_marginTop="42dp"
+        android:id="@+id/radioGroup"
         android:layout_alignRight="@+id/txtSearchBySeason"
         android:layout_alignEnd="@+id/txtSearchBySeason">
 
@@ -30,33 +32,32 @@
             android:layout_height="wrap_content"
             android:text="Spring"
             android:id="@+id/rbSpring"
-            android:checked="false" />
+            android:checked="false"
+            android:onClick = "onRadioButtonClicked" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Summer"
             android:id="@+id/rbSummer"
-            android:checked="false" />
+            android:checked="false"
+            android:onClick = "onRadioButtonClicked" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Autumn"
+            android:text="Fall"
             android:id="@+id/rbAutumn"
-            android:checked="false" />
+            android:checked="false"
+            android:onClick = "onRadioButtonClicked" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Winter"
             android:id="@+id/rbWinter"
-            android:checked="false" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txtSeasonsTest" />
+            android:checked="false"
+            android:onClick = "onRadioButtonClicked" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -70,5 +71,14 @@
             android:layout_alignParentStart="true" />
 
     </RadioGroup>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtSeasonsTest"
+        android:layout_gravity="right"
+        android:layout_alignBottom="@+id/radioGroup"
+        android:layout_toRightOf="@+id/radioGroup"
+        android:layout_toEndOf="@+id/radioGroup" />
 
 </RelativeLayout>
