--- a/app/src/main/res/layout/activity_state.xml
+++ b/app/src/main/res/layout/activity_state.xml
@@ -27,4 +27,21 @@
         android:layout_marginTop="36dp"
         android:checked="false"
         android:onClick="onRadioButtonClicked"/>
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Search"
+        android:id="@+id/btnSearchState"
+        android:layout_below="@+id/rbMontana"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtStateTest"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
