--- a/app/src/main/res/layout/activity_town_beer_list.xml
+++ b/app/src/main/res/layout/activity_town_beer_list.xml
@@ -4,12 +4,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.kooknluke.montanabreweries.seasonsBeerList">
+    tools:context="com.kooknluke.montanabreweries.townBeerList">
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lvSeasons"
+        android:id="@+id/lvTown"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
