Implemented final database as well as changes to all main activities to show if query was unsuccessful

--- a/app/src/main/res/layout/activity_town.xml
+++ b/app/src/main/res/layout/activity_town.xml
@@ -30,16 +30,8 @@
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Bozeman"
-            android:id="@+id/rbBozeman"
-            android:checked="false"
-            android:onClick="onRadioButtonClicked"/>
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Missoula"
-            android:id="@+id/rbMissoula"
+            android:text="Belgrade"
+            android:id="@+id/rbBelgrade"
             android:checked="false"
             android:onClick="onRadioButtonClicked" />
 
@@ -54,10 +46,50 @@
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Bozeman"
+            android:id="@+id/rbBozeman"
+            android:checked="false"
+            android:onClick="onRadioButtonClicked"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hamilton"
+            android:id="@+id/rbHamilton"
+            android:checked="false"
+            android:onClick="onRadioButtonClicked" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Helena"
             android:id="@+id/rbHelena"
             android:checked="false"
             android:onClick="onRadioButtonClicked"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Livingston"
+            android:id="@+id/rbLivingston"
+            android:checked="false"
+            android:onClick="onRadioButtonClicked" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Missoula"
+            android:id="@+id/rbMissoula"
+            android:checked="false"
+            android:onClick="onRadioButtonClicked" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Stevensville"
+            android:id="@+id/rbStevensville"
+            android:checked="false"
+            android:onClick="onRadioButtonClicked" />
 
         <RadioButton
             android:layout_width="wrap_content"
@@ -67,26 +99,6 @@
             android:checked="false"
             android:onClick="onRadioButtonClicked" />
 
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Kalispell"
-            android:id="@+id/rbKalispell"
-            android:checked="false"
-            android:onClick="onRadioButtonClicked" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New RadioButton"
-            android:id="@+id/radioButton7" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New RadioButton"
-            android:id="@+id/radioButton8" />
-
         <Button
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
@@ -94,10 +106,6 @@
             android:text="Search"
             android:id="@+id/btnSearchTwn" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/townTextView" />
     </RadioGroup>
 
     <RadioGroup
