Added radio buttons to beer history

--- a/app/src/main/res/layout/activity_beer_history.xml
+++ b/app/src/main/res/layout/activity_beer_history.xml
@@ -15,4 +15,90 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <RadioGroup
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/txtBeerHistoy"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/txtBeerHistoy"
+        android:layout_alignEnd="@+id/txtBeerHistoy">
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pale Ale"
+            android:id="@+id/rbBHPaleAle"
+            android:checked="false" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Barley Wine"
+            android:id="@+id/rbBHBarleyWine"
+            android:checked="false" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Helles"
+            android:id="@+id/rbBHHelles"
+            android:checked="false" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Stout"
+            android:id="@+id/rbBHStout"
+            android:checked="false" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Porter"
+            android:id="@+id/rbBHPorter"
+            android:checked="false" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Double IPA"
+            android:id="@+id/rbBHDoubleIPA"
+            android:checked="false" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lager"
+            android:id="@+id/rbBHLager"
+            android:checked="false" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Saison"
+            android:id="@+id/rbBHSaison"
+            android:checked="false" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Weizen"
+            android:id="@+id/rbBHWeizen"
+            android:checked="false" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="India Pale Ale"
+            android:id="@+id/rbBHIPA"
+            android:checked="false" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Search"
+            android:id="@+id/btnBeerHistorySearch" />
+    </RadioGroup>
 </RelativeLayout>
