--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -70,4 +70,15 @@
         android:id="@+id/btnBeerHistory"
         android:layout_below="@+id/btn_nutrition"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Connect"
+        android:id="@+id/btnConnect"
+        android:layout_below="@+id/btnBeerHistory"
+        android:layout_alignRight="@+id/btnBeerHistory"
+        android:layout_alignEnd="@+id/btnBeerHistory"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
