--- a/app/src/main/res/layout/activity_beer_info.xml
+++ b/app/src/main/res/layout/activity_beer_info.xml
@@ -4,22 +4,22 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.kooknluke.montanabreweries.BeerInfo">
+    tools:context="com.kooknluke.montanabreweries.beerInfo">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name"
-        android:id="@+id/beerNameTV"
+        android:id="@+id/tvBeerDescriptionName"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:layout_below="@+id/beerNameTV"
+        android:layout_width="@android:dimen/thumbnail_width"
+        android:layout_height="@android:dimen/thumbnail_height"
+        android:id="@+id/ivBeerImage"
+        android:layout_below="@+id/tvBeerDescriptionName"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -27,8 +27,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Description"
-        android:id="@+id/beerDescriptionTV"
-        android:layout_below="@+id/imageView"
+        android:id="@+id/tvBeerDescription"
+        android:layout_below="@+id/ivBeerImage"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
