--- a/app/src/main/res/layout/activity_breweries.xml
+++ b/app/src/main/res/layout/activity_breweries.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.kooknluke.montanabreweries.Breweries">
+    tools:context="com.kooknluke.montanabreweries.Breweries"
+    android:background="#3B5998">
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,7 +15,8 @@
         android:id="@+id/txtSearchByBreweries"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#ffffff" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -25,7 +27,8 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="38dp"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:textColor="#FFFFFF" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -35,7 +38,8 @@
         android:id="@+id/btnShowBeers"
         android:layout_below="@+id/etSearchBreweries"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:background="@drawable/custom_button" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -45,7 +49,8 @@
         android:id="@+id/btnShowAddress"
         android:layout_below="@+id/etSearchBreweries"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/custom_button" />
 
     <TextView
         android:layout_width="wrap_content"
