--- a/app/src/main/res/layout/activity_town.xml
+++ b/app/src/main/res/layout/activity_town.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.kooknluke.montanabreweries.Town">
+    tools:context="com.kooknluke.montanabreweries.Town"
+    android:background="#3B5998">
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,7 +15,8 @@
         android:id="@+id/txtSearchByTown"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#ffffff" />
 
     <RadioGroup
         android:layout_width="fill_parent"
@@ -104,7 +106,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Search"
-            android:id="@+id/btnSearchTwn" />
+            android:id="@+id/btnSearchTwn"
+            android:background="@drawable/custom_button" />
 
     </RadioGroup>
 
